[package]
name = "py-whelk"
description = "A wrapper around whelk"
version = "0.0.0"
authors = ["Björn Gehrke <bjoern.gehrke+pywhelk@uzh.ch>"]
edition = "2024"

[lib]
name="pywhelk"
crate-type=["cdylib"]

[dependencies]
horned-owl = "^1.0"
whelk = { git = "https://github.com/b-gehrke/whelk-rs" } # Waiting for https://github.com/INCATools/whelk-rs/pull/24
py-horned-owl-reasoner = { git = "https://github.com/ontology-tools/py-horned-owl", branch = "feature/reasoner" }
