[package]
name = "py-whelk"
description = "A wrapper around whelk"
version = "0.0.0"
authors = ["Björn Gehrke <bjoern.gehrke+pywhelk@uzh.ch>"]
edition = "2024"

[lib]
name="pywhelk"
crate-type=["cdylib"]

[dependencies]
#horned-owl = "^1.0"
horned-owl = { git = "https://github.com/phillord/horned-owl", branch = "devel" }
#whelk = { git = "https://github.com/b-gehrke/whelk-rs" } # Waiting for https://github.com/INCATools/whelk-rs/pull/24
whelk = { path = "../whelk-rs" }
#py-horned-owl-reasoner = { git = "https://github.com/ontology-tools/py-horned-owl", branch = "feature/reasoner" }
py-horned-owl-reasoner = { path = "../py-horned-owl/lib/reasoner" }