[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-whelk"
version = "0.1.0"
description = "Wrapper arround whelk-rs for integration with py-horned-owl"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Björn Gehrke", email = "bjoern.gehrke+pywhelk@uzh.ch" }
]
dependencies = [
    "py-horned-owl >= 1.2.0"
]

[tool.setuptools]
packages = ["pywhelk"]

[tool.setuptools.package-data]
pywhelk = ["*.so", "*.dll"]
