[build-system]
requires = ["maturin>=1.0,<2.0","cffi"]
build-backend = "maturin"

[project]
name = "py-whelk"
description = "Wrapper arround whelk-rs for integration with py-horned-owl"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-3.0-or-later"
authors = [
    { name = "Björn Gehrke", email = "bjoern.gehrke+pywhelk@uzh.ch" }
]
dependencies = [
    "cffi",
    "py-horned-owl >= 1.2.0",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


